Fix for rendering bug that card border of cards had a gap

--- a/client/src/Card.css
+++ b/client/src/Card.css
@@ -6,6 +6,9 @@
   background-color: white;
   height: 100%;
   aspect-ratio: 52 / 72;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .card__current-points--reduced {
